Applied the name search function to the front-end, at the Countries page.

--- a/Airline/ars-web/src/App.css
+++ b/Airline/ars-web/src/App.css
@@ -758,6 +758,20 @@ select:active {
 }
 
 
+.search {
+  width: auto;
+}
+
+.custom-textfield {
+  background-color: rgb(227, 240, 248);
+  font-size: medium;
+  border-radius: 8px;
+}
+
+.custom-textfield:hover {
+  background-color: #ffffff;
+}
+
 /* ======================================================================================================================================================== */
 /* Some of my old CSS ============================================================================================================================================= */
 
